# synesthete

./: .gitignore  CMakeLists.txt  Kconfig  README.md  dacdrivers.patch  prj.conf
boards/: nucleo_f446re.overlay
hardware/synesthete/: _saved_synesthete.sch  synesthete.kicad_pcb  synesthete.sch
src/: main.c
src/adc/: adc.c  adc.h
src/dacout/: dacout.c  dacout.h
src/gpio/: gpio.c  gpio.h
src/gui/: gui.c  gui.h
src/synesthete/: synesthete.c  synesthete.h
src/ux/pots/: pots.h
src/ux/touch/: touch.c  touch.h
src/ux/touch/touch_adc/: touch_adc.c  touch_adc.h
src/ux/touch/touch_gpio/: touch_gpio.c  touch_gpio.h
src/wavetab/: wavetab.c  wavetab.h
